# inlineviewer

./: .gitignore  LICENSE  README.md  SKILL.md  context7.json  pyproject.toml
src/viewinline/: viewinline.py
