[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viewinline"
version = "0.2.0"
description = "Quick look geospatial viewer for iTerm2 compatible terminals"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Keiko Nomura" }
]
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pillow",
  "rasterio",
  "geopandas",
  "matplotlib",
  "pyogrio"
]

[project.optional-dependencies]
sql = ["duckdb"]

[project.scripts]
viewinline = "viewinline.viewinline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/viewinline"]

[project.urls]
Homepage = "https://github.com/nkeikon/viewinline"
Repository = "https://github.com/nkeikon/viewinline"
Issues = "https://github.com/nkeikon/viewinline/issues"

